...
            //.sheet(item: $selectedArticle, content: { article in
               // ArticleDetailView(article: article)
           // })
            .fullScreenCover(item: $selectedArticle, content: { article in
                ArticleDetailView(article: article)
            })
            .navigationTitle("Your Reading!!!")
        }
    }
}

#Preview {
    SheetExample()
}

#if DEBUG
var articles = [
    Article(image: "state-management", title: "Android", author: "Alexey Naumov", rating: 4, description: "Hello and welcome to a new tutorial! One of the most common concepts met and used in Swift by all developers is protocols, and I don’t think there’s even one developer who doesn’t know about them. Protocols can be used to serve various purposes, however, what remains always the same is what t
    Article(image: "macos-programming", title: "iOS", author: "Akshay", rating: 3, description: "With SwiftUI, you can easily draw a border around a button or text (and it actually works for all views) using the border modifier. Say, for example, you want to create a button like this.\n\nWe can apply the border modifier on a button object to create a button with a coloured border.\n\nBut what if y
    Article(image: "swiftui-button", title: "The Comprehensive Guide to the State Management in iOS", author: "Alexey Naumov", rating: 2, description: "Welcome to another tutorial where we’ll keep exploring fundamental stuff on macOS programming world. Today we are going to focus on a commonly used family of controls which are vital to every application. Their primary purpose is to gather user inp
    Article(image: "flutter-app", title: "The Comprehensive Guide to the State Management in iOS", author: "Alexey Naumov", rating: 1, description: "Hello there! Welcome to the second tutorial of our Flutter series. In the last tutorial, you learned the basics of building a Flutter app. So if you have not gone through it, please take a pit stop here, visit it first before proceeding with this tuto

]
#endif
...
